--- a/src/index.css
+++ b/src/index.css
@@ -1,1 +1,12 @@
 @import "tailwindcss";
+
+@theme {
+    --breakpoint-2xs: 524px;  /* маленькие телефоны (xs) */
+    --breakpoint-lg: 768px;   /* планшеты горизонтально */
+    --breakpoint-2xl: 1280px; /* ноутбуки, средние десктопы */
+  }
+
+   body {
+    max-width: 1400px;
+    margin: auto;
+   }
